# opencv-video-sketch

./: .clang-format  .gitignore  CMakeLists.txt  FrameProc.cpp  FrameProc.h  README.md  ThreadSafeQueue.h  main.cpp
rtsp_streamer/: streamer.sh
